fixed ambiguity of confirmation window

--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -35,11 +35,11 @@
             <div>
                 <p>{{confirmationMessage}}</p>
                 <div>
-                    <button @click="confirmationResult = true; confirmationDone = true;" class="material-icons">
-                        done
+                    <button @click="confirmationResult = true; confirmationDone = true;">
+                        Confirm
                     </button>
-                    <button @click="confirmationResult = false; confirmationDone = true;" class="material-icons">
-                        close
+                    <button @click="confirmationResult = false; confirmationDone = true;">
+                        Dismiss
                     </button>
                 </div>
             </div>
