changed design of new and fixed channel picture in nightly

--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -805,8 +805,8 @@
                             <div target="_blank" @click="filterByChannelFromVideoList(video.channelId);" style="text-decoration: none;">
                                 <img :src="'channelPictures/' + video.channelId + '.jpg'" style="left:0;width:32px;height:32px;border-radius: 50%;vertical-align:middle;cursor:pointer;"/>
                                 <span class="videoHeaderName">{{video.channelTitle}}</span>
-                            </div>
-                            <span class="videoHeaderNameNew" v-show="settings.HighlightNewVideos && ((today.getTime()/1000 - video.publishedAt.getTime()/1000) < 86400)">NEW</span>
+                                <span class="videoHeaderNameNew" v-show="settings.HighlightNewVideos && ((today.getTime()/1000 - video.publishedAt.getTime()/1000) < 86400)">NEW</span>
+                            </div>    
                         </div>
                         <div class="videoContentDiv">
                             <div class="videoThumb">
@@ -824,7 +824,7 @@
                                         </div>
                                     </div>
                                     <div class="videoTitleButtons">
-                                        <button v-show="video.dlstatus == 0" class="material-icons videoTitleButton tooltip" @click="downloadVideo(video)"><div class="tooltiptext ttleft">Download Video</div>save_alt</button>
+                                        <button v-show="video.dlstatus == 0" class="material-icons videoTitleButton tooltip" @click="downloadVideo(video)"><div class="tooltiptext ttleft">Download Video to SubBox Nightly</div>save_alt</button>
                                         <button v-show="video.dlstatus == 1" v-bind:id="'video' + video.id" class="dlStatus1Button" style="cursor: default;">{{(video.dlprogress === "100") ? "Just a second..." : video.dlprogress + "% Finished"}}</button>
                                         <button v-show="video.dlstatus == 2" class="dlStatus2Button" @click="window.location.replace('http://localhost:2828/localbrowser.html?id=' + video.id);">Available in Nightly</button>
                                         <button class="material-icons videoTitleButton tooltip" @click="deleteVideo(video)"><div class="tooltiptext ttright">Move to Trashbin</div>clear</button>
