fixed lineheight of new

--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -840,7 +840,7 @@
                 </div>
                 <div class="bottomDiv">
                     <a target="_blank" rel="noopener noreferrer" href="https://github.com/MilchRatchet/SubBox" class="bottomDivEntry"><i class="bd-github"></i> Github</a>
-                    <a href="http://localhost:2828/tutorial.html" class="bottomDivEntry"><i class="bd-html5"></i>Introduction</a>
+                    <a href="http://localhost:2828/tutorial.html" class="bottomDivEntry">Introduction</a>
                     <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/" class="bottomDivEntry"><i class="bd-youtube"></i>Youtube</a>
                 </div>
             </div>
