Fixed Lunar New Year theme name being too long.

--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -436,7 +436,7 @@
                                     Twitch Dark
                                 </option>
                                 <option value="ThemeLunarNewYear">
-                                    Lunar New Year
+                                    Lunar NY
                                 </option>
                                 <option value="ThemeHalloween">
                                     Halloween
