Updated instructions on how to add channels.

--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -799,7 +799,7 @@
                 <div class="channelLastRowDiv">
                     <div>
                         <input @keyup.enter="submitChannel()" v-model="addChannelName" autocomplete="off" type="text"
-                            name="Username" placeholder="Channel Name..." />
+                            name="Username" placeholder="Channel Title..." />
                         <button @click="submitChannel()" class="material-icons addChannelButton">add</button>
                     </div>
                     <div></div>
