--- a/SubBox/wwwroot/tutorial.html
+++ b/SubBox/wwwroot/tutorial.html
@@ -87,14 +87,9 @@
                         Channels
                     </p>
                     <p>
-                        Add your favourite channels through entering their username. Their username might not be the
-                        name you
-                        are familiar with, in that case, open their channel on Youtube and copy their name there from
-                        the link as shown. Through the channels button you can get a list of all your currently added
-                        channels. Here you can
-                        decide to show only videos of one particular channel by clicking on the star icon. Remove a
-                        channel
-                        with the delete button.
+                        Add your favourite channels through entering their channel title. Through the channels button
+                        you can get a list of all your currently added channels. Here you can decide to show only videos
+                        of one particular channel by clicking on the star icon. Remove a channel with the delete button.
                     </p>
                 </div>
             </section>
