Added auto delete shorts option.

--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -586,6 +586,17 @@
                         </label>
                     </div>
                 </div>
+                <div class="singleSetting" @click.prevent="settings.AutoDeleteShorts = !settings.AutoDeleteShorts">
+                    <div style="justify-content: flex-start;">
+                        <p>Automatically Delete Shorts</p>
+                    </div>
+                    <div style="justify-content: flex-end;">
+                        <label class="switch">
+                            <input type="checkbox" v-model="settings.AutoDeleteShorts" />
+                            <span class="slider"></span>
+                        </label>
+                    </div>
+                </div>
             </div>
             <div v-show="settingsTab === 1" class="settingsList">
                 <div class="singleSetting" @click.prevent="settings.ConfirmWindow = !settings.ConfirmWindow">
